--- a/index.html
+++ b/index.html
@@ -61,16 +61,20 @@
           const user = userCredential.user;
           user.sendEmailVerification()
             .then(() => {
-              showMessage("Sign-up successful! Verification email sent. Check your inbox.", "green");
+              document.getElementById('message').style.color = 'green';
+              document.getElementById('message').innerText = "Sign-up successful! Verification email sent. Check your inbox.";
               document.getElementById('resendBtn').style.display = 'inline-block';
             });
         })
         .catch(error => {
+          // If email already exists
           if (error.code === "auth/email-already-in-use") {
-            showMessage("Email already exists! If not verified, click 'Resend Verification'.", "red");
+            document.getElementById('message').style.color = 'red';
+            document.getElementById('message').innerText = "Email already exists! If you haven't verified it, click 'Resend Verification'.";
             document.getElementById('resendBtn').style.display = 'inline-block';
           } else {
-            showMessage(error.message, "red");
+            document.getElementById('message').style.color = 'red';
+            document.getElementById('message').innerText = error.message;
           }
         });
     }
@@ -89,39 +93,53 @@
             document.getElementById('resendBtn').style.display = 'none';
           } else {
             auth.signOut();
-            showMessage("Email not verified! Check your inbox or click 'Resend Verification'.", "red");
+            document.getElementById('message').style.color = 'red';
+            document.getElementById('message').innerText = "Email not verified! Check your inbox or click 'Resend Verification'.";
             document.getElementById('resendBtn').style.display = 'inline-block';
           }
         })
-        .catch(error => showMessage(error.message, "red"));
+        .catch(error => {
+          document.getElementById('message').style.color = 'red';
+          document.getElementById('message').innerText = error.message;
+        });
     }
 
-    // Resend verification email (automatic, no password needed)
+    // Resend verification email function
     function resendVerification() {
       const email = document.getElementById('signup-email').value || document.getElementById('login-email').value;
       if (!email) {
-        showMessage("Enter your email first to resend verification.", "red");
+        document.getElementById('message').style.color = 'red';
+        document.getElementById('message').innerText = "Enter your email first to resend verification.";
         return;
       }
 
-      // Fetch the sign-in methods to check if account exists
-      auth.fetchSignInMethodsForEmail(email)
-        .then(methods => {
-          if (methods.length === 0) {
-            showMessage("No account found with this email. Please sign up first.", "red");
-            return;
+      // Sign in temporarily to send verification email
+      const password = prompt("Enter your account password to resend verification email:");
+      if (!password) return;
+
+      auth.signInWithEmailAndPassword(email, password)
+        .then(userCredential => {
+          const user = userCredential.user;
+          if (user.emailVerified) {
+            auth.signOut();
+            document.getElementById('message').style.color = 'green';
+            document.getElementById('message').innerText = "Your email is already verified. You can log in now.";
+          } else {
+            user.sendEmailVerification()
+              .then(() => {
+                auth.signOut();
+                document.getElementById('message').style.color = 'green';
+                document.getElementById('message').innerText = "Verification email resent! Check your inbox.";
+              });
           }
-
-          // Sign in anonymously and send verification email through the backend
-          auth.signInWithEmailAndPassword(email, "dummyPasswordForResend123").catch(() => {});
-
-          // Use Firebase Admin or currentUser (simplified workaround):
-          // Firebase doesn't allow sending verification without signing in, so here we guide user
-          showMessage("Check your inbox for verification email. If you didn't receive it, log in and use 'Resend Verification'.", "green");
         })
-        .catch(err => showMessage("Error: " + err.message, "red"));
+        .catch(error => {
+          document.getElementById('message').style.color = 'red';
+          document.getElementById('message').innerText = "Error: " + error.message;
+        });
     }
 
+    // Logout function
     function logout() {
       auth.signOut().then(() => {
         document.getElementById('auth-section').style.display = 'block';
@@ -129,12 +147,6 @@
         document.getElementById('resendBtn').style.display = 'none';
         document.getElementById('message').innerText = "";
       });
-    }
-
-    function showMessage(msg, color) {
-      const m = document.getElementById('message');
-      m.style.color = color;
-      m.innerText = msg;
     }
   </script>
 </body>
